WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
283968
ARMv7: Fix testStoreAfterClobber*
https://bugs.webkit.org/show_bug.cgi?id=283968
Summary
ARMv7: Fix testStoreAfterClobber*
Angelos Oikonomopoulos
Reported
2024-12-03 05:09:11 PST
Some 64bit-isms, some extra register assumptions.
Attachments
Add attachment
proposed patch, testcase, etc.
Angelos Oikonomopoulos
Comment 1
2024-12-03 05:16:22 PST
Pull request:
https://github.com/WebKit/WebKit/pull/37371
Radar WebKit Bug Importer
Comment 2
2024-12-10 05:10:12 PST
<
rdar://problem/141214515
>
EWS
Comment 3
2024-12-19 00:21:33 PST
Committed
288076@main
(3663b1213e4b): <
https://commits.webkit.org/288076@main
> Reviewed commits have been landed. Closing PR #37371 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug