ARMv7: Fix testStoreAfterClobber* https://bugs.webkit.org/show_bug.cgi?id=283968

Reviewed by Justin Michaud.

Adjust for 64-bits and don't try to pin registers that have been removed
from the register set in Air::Code::Code().

* Source/JavaScriptCore/b3/testb3_8.cpp:
(testStoreAfterClobberExitsSideways):
(testStoreAfterClobberDifferentWidth):
(testStoreAfterClobberDifferentWidthSuccessor):
(testStoreAfterClobberExitsSidewaysSuccessor):

Canonical link: https://commits.webkit.org/288076@main